# android-rtmp-stream

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
rtmp/: CMakeLists.txt  build.gradle
rtmp/src/androidTest/java/dev/oscarreyes/rtmp/: ExampleInstrumentedTest.java
rtmp/src/main/: AndroidManifest.xml
rtmp/src/main/java/dev/oscarreyes/rtmp/: RtmpStream.java
rtmp/src/main/java/dev/oscarreyes/rtmp/async/: Worker.java
rtmp/src/main/java/dev/oscarreyes/rtmp/io/: AudioEncoder.java  Channel.java  FFMpegMuxer.java  Frame.java  MasterEncoderChannel.java
rtmp/src/main/jni/: ffmpeg_muxer.c
rtmp/src/main/jni/ffmpeg/android-arm/ffmpeg/include/: config.h
rtmp/src/main/jni/ffmpeg/android-arm/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
rtmp/src/main/jni/ffmpeg/android-arm/pkgconfig/: zlib.pc
rtmp/src/main/jni/ffmpeg/android-arm64/ffmpeg/include/: config.h
rtmp/src/main/jni/ffmpeg/android-arm64/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
rtmp/src/main/jni/ffmpeg/android-arm64/pkgconfig/: zlib.pc
rtmp/src/main/jni/ffmpeg/android-x86/ffmpeg/include/: config.h
rtmp/src/main/jni/ffmpeg/android-x86/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
rtmp/src/main/jni/ffmpeg/android-x86/pkgconfig/: cpufeatures.pc  zlib.pc
rtmp/src/main/jni/ffmpeg/android-x86_64/ffmpeg/include/: config.h
rtmp/src/main/jni/ffmpeg/android-x86_64/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
rtmp/src/main/jni/ffmpeg/android-x86_64/pkgconfig/: zlib.pc
rtmp/src/test/java/dev/oscarreyes/rtmp/: ExampleUnitTest.java
(+10 files in other folders)
